--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -34,19 +34,13 @@
   }
 }
 
-.page__title {
-  margin-top: 0;
-  line-height: 1;
-
-  & + .page__meta {
-    margin-top: -0.5em;
-  }
-}
-
-.page__lead {
-  font-family: $global-font-family;
-  font-size: $type-size-4;
-}
+.page__title,
+.page__meta,
+.page__lead,
+btn {
+      color: #fff;
+      text-shadow: 3px 3px 4px rgba(#000, 0.8);
+    }
 
 .page__content {
 
