--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -37,6 +37,10 @@
 .page__title,
 .page__meta,
 .page__lead,
+.btn {
+      color: #fff;
+      text-shadow: 1px 1px 4px rgba(#000, 0.5);
+    }
 
 .page__content {
 
