--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -91,7 +91,7 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : $light-gray;
+$link-color                 : $darker-gray;
 //$link-color                 : #007bb6 !default;
 //$link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
